Deep rewrite of Network, Collections, and Class-File API topics (batch 5)
by-topic/concurrency/network/index.md (677 → 1011 lines):
- Socket API evolution: BIO → NIO → Virtual Thread
- NIO.2 vs Virtual Threads comparison
- HTTP Client (JEP 321): HTTP/2 multiplexing, connection pool
- HTTP/3 (JEP 517): QUIC, 0-RTT, transparent API
- Unix Domain Sockets (JEP 380): container IPC
- DatagramSocket reimplementation (JEP 353/373)
- DNS resolution: cache, virtual thread pinning

by-topic/api/collections/index.md (545 → 828 lines):
- Framework architecture: interface hierarchy diagram
- JDK 9 factory methods: List12/ListN internals
- Sequenced Collections (JEP 431): reversed() O(1) view
- ConcurrentHashMap: CAS+synchronized, computeIfAbsent traps
- Stream Gatherers (JEP 485): custom Gatherer
- Immutable collections: 3-way comparison
- Performance guide: ArrayList vs LinkedList, HashMap variants

by-topic/language/classfile/index.md (564 → 952 lines):
- Design philosophy: immutable, type-safe, Tree vs Visitor
- Core API: ClassModel, MethodModel, CodeModel, 3 modes
- Bytecode generation: Hello World, dynamic proxy
- ASM comparison: API style, migration mapping
- Bytecode transformation: class/method/instruction level
- Framework usage: Spring, Hibernate, Java Agent

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>